   * Improved support for setting id= within a [variation].
  * Added support for square bracket expansion in animation strings I.E
    halo="pic[1-2,5]:[10,20,30]" expands to halo="pic1:10,pic2:20,pic5:30"
    this is used for halos, team flags, animated terrains and unit animations
  * Changed default unit halos and macros to use new square bracket expansion
 Miscellaneous and bug fixes:
   * The undo stack is preserved across a save-reload.
   * Removed several unused private member variables.
   * Fixed the present in-game command line autocompletion feature so it
     actually works without using :debug
   * Removed recognition of the --smallgui command line option, which has been
     superfluous since 1.9.5.
   * Made wmllint recognize victory_string, defeat_string,
     gold_carryover_string, and notes_string (all from the [objectives] tag) as
     attributes that need to be made translatable
   * Added -Wdocumentation to the CMake pedantic flags.
   * Make drakes fly on volcano tiles (bug #20485).
   * Added a FOREACH macro to emulate C++11 for(... : ...) style loops.

Version 1.11.1:
 * AI:
   * New AI: Experimental AI
     * Improved recruitment, castle and village management over current default AI
 * Campaigns:
   * Dead Water:
     * Removed duplicated loyalty overlay (that now is in core), and used
       {IS_LOYAL} macro
     * Stunned units are now marked with a status icon
   * Delfador's Memoirs
     * Add dummy side to cutscene to avoid crash at end of story part
       (bug #20208)
   * Eastern Invasion:
     * New set of portraits
   * Legend of Wesmere:
     * Scenario 02: Replaced the moveto events for checking the
       dwarvish borders with enter_hex events
     * Scenario 08: Add dummy side to cutscene to avoid crash at end of story
       part (bug #20208)
   * The Rise of Wesnoth:
     * Fix bug #16772: AI won't attack
   * Under the Burning Suns:
     * Keep a spawned unit from disappearing on reload in scenario 6b